# Rubiks_Cube_RL

./: .gitignore  Dockerfile  README.md  WILO.txt  app.py  env_unit_tests.py  episode.py  main.py  pipeline.drawio  pyproject.toml  rubiks_cube.py  server.py  solver.py  sphere.py
install/: requirements.txt
rubiks_utils/: __init__.py  episode.py  solver.py  sphere.py
scripts/: main.py
